--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <!-- Header -->
         <header id="main-header">
             <div class="container">
-                <h1>J. L. Hilton Foundation</h1>
-                <p>Future Home of Jack and James Hilton's Entrepreneurial-focused Foundation</p>
+                <h1>J. L. Hilton</h1>
+                <p>Future Home of Jack and James Hilton's Entrepreneurship  Foundation</p>
             </div>
         </header>
 
