--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
         <meta name="author" content="Jack Hilton">
         <meta name="keywords" content="akron, entrepreneurship, inkhorn games, oom labs, 3pivots, extinct corporation, quixby, philanthropy, ohio, flurgle">
 
-        <!-- CSS, Normalize First, minify for production -->
         <link href="less/fore.css" rel="stylesheet">
 
-        <!-- Import web fonts using the link tag instead of CSS @import -->
         <link href="http://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
 
-        <!-- Icons from http://fontawesome.io/ -->
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
-        <!-- Favicon.ico and apple-touch-icon.png (according to Apple docs). A good tool is http://iconogen.com/. Place these in the root directory. -->
         <link rel="shortcut icon" href="assets/ico/favicon.ico">
         <link rel="apple-touch-icon" href="touch-icon-iphone.png">
         <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
@@ -47,49 +43,12 @@
         </header>
 
 
-        <!-- Macbook Section -->
-        <section id="macbook">
+        <!-- About Section -->
+        <section id="About">
             <div class="container">
                 <h2>Lorem ipsum piscing elit</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et turpis faucibus, rhoncus lacus ac, aliquam augue. Aenean tellus massa, pharetra ac lacus fringilla, porttitor pharetra nisl. Cras facilisis, arcu sit amet imperdiet euismod.</p>
                 <img src="images/macbookpro.png"/>
-            </div>
-        </section>
-
-
-        <!-- Summary Section -->
-        <section id="summary">
-            <div class="container">
-                <h2>Lorem ipsum agane tuet</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et turpis faucibus, rhoncus lacus ac, aliquam augue. Aenean tellus massa, pharetra ac lacus fringilla, porttitor pharetra nisl. Cras facilisis, arcu sit amet imperdiet euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et turpis faucibus, rhoncus lacus ac, aliquam augue. Aenean tellus massa, pharetra ac lacus fringilla, porttitor pharetra nisl. Cras facilisis, arcu sit amet imperdiet euismod.</p>
-            </div>
-        </section>
-
-
-        <!-- Three Images Section -->
-        <section id="three-images">
-            <div class="container">
-                <header class="body-header">
-                    <h2>You're probably feeling really inspired.</h2>
-                    <p>Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.</p>
-                </header>
-                <article class="cf">
-                    <div class="img-circle-div">
-                        <img src="images/circle1.jpg"/>
-                        <h3>Morbi in sem quis dui</h3>
-                        <p>Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
-                    </div>
-                    <div class="img-circle-div">
-                        <img src="images/circle2.jpg"/>
-                        <h3>Nam nulla quam, gravida non</h3>
-                        <p>Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices tem.</p>
-                    </div>
-                    <div class="img-circle-div">
-                        <img src="images/circle3.jpg"/>
-                        <h3>Suspendisse commodo</h3>
-                        <p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit.</p>
-                    </div>
-                </article>
             </div>
         </section>
 
