--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <!-- Reference jQuery -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
-        <!-- Reference Javascript, minified for production -->
+        <!-- Reference Javascript -->
         <script src="js/fore.min.js"></script>
 
         <!-- Unslider script -->
