--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </li>
                     <li class="slide" id="slide2">
                         <h2>Inkhorn Games</h2>
-                        <p>Creating PC & mobile games that don't suck.</p>
+                        <p>Video game development and publishing, such as Nerd Score and <a href="http://www.orderofancients.com" target="_blank">Order of Ancients</a>.</p>
                         <a class="btn" href="http://www.inkhorngames.com">Visit</a>
                     </li>
                     <li class="slide" id="slide3">
@@ -96,7 +96,7 @@
         <footer>
             <div class="container">
                 <div id="footer-text" class="small">
-                <p>&copy; Jack & James Hilton. 2015. | Design by <a href="http://www.jrdnbwmn.com/blueberry/" target="_blank">Blueberry</a>, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a></p>
+                <p>&copy; Jack & James Hilton. 2015. | <a href="https://www.flickr.com/photos/kenlund/7994666775" target="_blank">Photo</a> under <a href="https://creativecommons.org/licenses/by-sa/2.0/" target="_blank">CC BY 2.0</a> | Fore, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a></p>
                 </div>
             </div>
         </footer>
