--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
 
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
-        <link rel="shortcut icon" href="assets/ico/favicon.ico">
-        <link rel="apple-touch-icon" href="touch-icon-iphone.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
     </head>
 
@@ -96,7 +92,7 @@
         <footer>
             <div class="container">
                 <div id="footer-text" class="small">
-                <p>&copy; Jack & James Hilton. 2015. | <a href="https://www.flickr.com/photos/kenlund/7994666775" target="_blank">Photo</a> under <a href="https://creativecommons.org/licenses/by-sa/2.0/" target="_blank">CC BY 2.0</a> | Fore, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a></p>
+                <p>&copy; Jack & James L. Hilton. 2015. | <a href="https://www.flickr.com/photos/kenlund/7994666775" target="_blank">Photo</a> under <a href="https://creativecommons.org/licenses/by-sa/2.0/" target="_blank">CC BY 2.0</a> | Fore, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a></p>
                 </div>
             </div>
         </footer>
