--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
-        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
 
     </head>
 
