Content and Image Fixes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header id="main-header">
             <div class="container">
                 <h1>J. L. Hilton</h1>
-                <p>Future Home of Jack and James Hilton's Entrepreneurship  Foundation</p>
+                <p>Future Website of Jack and James Hilton's Entrepreneurship Foundation</p>
             </div>
         </header>
 
@@ -42,9 +42,9 @@
         <!-- About Section -->
         <section id="About">
             <div class="container">
-                <h2>Lorem ipsum piscing elit</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et turpis faucibus, rhoncus lacus ac, aliquam augue. Aenean tellus massa, pharetra ac lacus fringilla, porttitor pharetra nisl. Cras facilisis, arcu sit amet imperdiet euismod.</p>
-                <img src="images/macbookpro.png"/>
+                <h2>Dedicated To Entrepreneurship</h2>
+                <p>Jack and James Hilton are indentical twins and serial entrepreneurs; they grew up in Akron, following in the footsteps of their father, James Larry and grandfather, James Lee. This is the future home for the intended entrepreneurial foundation that will seek to grow early stage internet startup culture nationwide.</p>
+                <img src="images/abstract.png"/>
             </div>
         </section>
 
