--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <h2>Dedicated To Entrepreneurship</h2>
                 <p>Jack and James Hilton are indentical twins and serial entrepreneurs; they grew up in Akron, following in the footsteps of their father, James Larry and grandfather, James Lee. This is the future home for the intended entrepreneurial foundation that will seek to grow early stage internet startup culture nationwide.</p>
-                <img src="images/skyline.png"/>
+                <img src="images/filler.png"/>
             </div>
         </section>
 
