--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="container">
                 <h2>Dedicated To Entrepreneurship</h2>
                 <p>Jack and James Hilton are indentical twins and serial entrepreneurs; they grew up in Akron, following in the footsteps of their father, James Larry, and grandfather, James Lee. This is the future home for the intended entrepreneurial foundation that will seek to grow early stage internet startup culture nationwide.</p>
+                <p>The Hilton twins are currently co-founders of multiple startups in Northeast Ohio with their business partners <a href="http://www.austinkettner.com" target="_blank"">Austin Kettner</a> and Shahar Hadas, learn more below.</p>
                 <img src="images/filler.png"/>
             </div>
         </section>
@@ -66,22 +67,22 @@
                     <li class="slide" id="slide1">
                         <h2>OOM Labs</h2>
                         <p>Creator of <a href="http://www.flurgle.io" target="_blank">Flurgle</a>, OOM Labs builds awesome mobile experiences.</p>
-                        <a class="btn" href="http://www.oomlabs.com">Visit</a>
+                        <a class="btn" href="http://www.oomlabs.com">Learn More</a>
                     </li>
                     <li class="slide" id="slide2">
                         <h2>Inkhorn Games</h2>
                         <p>Video game development and publishing, such as Nerd Score and <a href="http://www.orderofancients.com" target="_blank">Order of Ancients</a>.</p>
-                        <a class="btn" href="http://www.inkhorngames.com">Visit</a>
+                        <a class="btn" href="http://www.inkhorngames.com">Learn More</a>
                     </li>
                     <li class="slide" id="slide3">
                         <h2>Extinct Corporation</h2>
                         <p>Stealthmode PC gaming platform, slowly controlling the future.</p>
-                        <a class="btn" href="http://www.extinctcorp.com">Visit</a>
+                        <a class="btn" href="http://www.extinctcorp.com">Learn More</a>
                     </li>
                     <li class="slide" id="slide4">
                         <h2>3Pivots Consulting</h2>
                         <p>Design, development, and strategy consulting for web and mobile.</p>
-                        <a class="btn" href="http://www.3pivots.com">Visit</a>
+                        <a class="btn" href="http://www.3pivots.com">Learn More</a>
                     </li>
                 </ul>
             </div>
