Final Content Changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header id="main-header">
             <div class="container">
                 <h1>J. L. Hilton</h1>
-                <p>Future Website of Jack and James Hilton's Entrepreneurship Foundation</p>
+                <p>Built on Perseverance, Honesty, and Conservation </p>
             </div>
         </header>
 
@@ -43,8 +43,8 @@
         <section id="About">
             <div class="container">
                 <h2>Dedicated To Entrepreneurship</h2>
-                <p>Jack and James Hilton are indentical twins and serial entrepreneurs; they grew up in Akron, following in the footsteps of their father, James Larry, and grandfather, James Lee. This is the future home for the intended entrepreneurial foundation that will seek to grow early stage internet startup culture nationwide.</p>
-                <p>The Hilton twins are currently co-founders of multiple startups in Northeast Ohio with their business partners <a href="http://www.austinkettner.com" target="_blank"">Austin Kettner</a> and Shahar Hadas, learn more below.</p>
+                <p>Jack and James Hilton are indentical twins and serial entrepreneurs; they grew up in Akron, Ohio, following in the business footsteps of their father, James Larry, and grandfather, James Lee. This is the future website for their intended entrepreneurial foundation that will seek to grow early stage internet startup culture nationwide.</p>
+                <p>The Hilton brothers are previously, and currently, co-founders of multiple startups with their business partners <a href="http://www.austinkettner.com" target="_blank"">Austin Kettner</a> and Shahar Hadas.</p>
                 <img src="images/filler.png"/>
             </div>
         </section>
