Fixed Spelling Error

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header id="main-header">
             <div class="container">
                 <h1>J.L.H. Foundation</h1>
-                <p>Built on Perseverance, Honesty, and Conservation </p>
+                <p>Built with Perseverance, Honesty, and Conservation </p>
             </div>
         </header>
 
