--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <div class="slider">
                 <ul>
                     <li class="slide" id="slide1">
-                        <h2>OOM Labs</h2>
-                        <p>Creator of <a href="http://www.flurgle.io" target="_blank">Flurgle</a>, OOM Labs builds awesome mobile experiences.</p>
-                        <a class="btn" href="http://www.oomlabs.com">Learn More</a>
+                        <h2>Qntmic</h2>
+                        <p>Creator of <a href="http://www.flurgle.io" target="_blank">Flurgle</a>, Qntmic, Inc. builds awesome mobile experiences.</p>
+                        <a class="btn" href="http://www.qntmic.com">Learn More</a>
                     </li>
                     <li class="slide" id="slide2">
                         <h2>Inkhorn Games</h2>
