--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Header -->
         <header id="main-header">
             <div class="container">
-                <h1>J.L.H. Foundation</h1>
+                <h1>J.L. Hilton FDN</h1>
                 <p>Built with Perseverance, Honesty, and Conservation </p>
             </div>
         </header>
