--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="This website and organization is under construction - the future home of the J. L. Hilton Foundation.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Jack Hilton">
-        <meta name="keywords" content="akron, entrepreneurship, inkhorn games, oom labs, 3pivots, extinct corporation, quixby, philanthropy, ohio, flurgle">
+        <meta name="keywords" content="akron, entrepreneurship, inkhorn games, the bit factory, darkshore, wonderkiln, 3pivots, extinct corporation, quixby, philanthropy, ohio, flurgle">
 
         <link href="less/fore.css" rel="stylesheet">
 
@@ -44,7 +44,7 @@
             <div class="container">
                 <h2>Dedicated To Entrepreneurship</h2>
                 <p>Jack and James Hilton are indentical twins and serial entrepreneurs; they grew up in Akron, Ohio, following in the business footsteps of their father, James Larry, and grandfather, James Lee. This is the future website for their intended entrepreneurial foundation that will seek to grow early stage internet startup culture nationwide.</p>
-                <p>The Hilton brothers are previously, and currently, co-founders of multiple startups with their business partners <a href="http://www.austinkettner.com" target="_blank"">Austin Kettner</a> and Shahar Hadas.</p>
+                <p>The Hilton brothers are previously, and currently, co-founders of multiple startups with their business partners <a href="http://www.austinkettner.com" target="_blank"">Austin Kettner</a>.</p>
                 <img src="images/filler.png"/>
             </div>
         </section>
@@ -65,9 +65,9 @@
             <div class="slider">
                 <ul>
                     <li class="slide" id="slide1">
-                        <h2>Qntmic</h2>
-                        <p>Creator of <a href="http://www.flurgle.io" target="_blank">Flurgle</a>, Qntmic, Inc. builds awesome mobile experiences.</p>
-                        <a class="btn" href="http://www.qntmic.com">Learn More</a>
+                        <h2>WonderKiln</h2>
+                        <p>Creator of <a href="http://www.flurgle.io" target="_blank">Flurgle</a>, WonderKiln, Inc. builds awesome products - UI, UX, and development.</p>
+                        <a class="btn" href="http://www.wonderkiln.com">Learn More</a>
                     </li>
                     <li class="slide" id="slide2">
                         <h2>Inkhorn Games</h2>
@@ -80,9 +80,9 @@
                         <a class="btn" href="http://www.extinctcorp.com">Learn More</a>
                     </li>
                     <li class="slide" id="slide4">
-                        <h2>3Pivots Consulting</h2>
-                        <p>Design, development, and strategy consulting for web and mobile.</p>
-                        <a class="btn" href="http://www.3pivots.com">Learn More</a>
+                        <h2>The Bit Factory</h2>
+                        <p>Software and gaming startup accelerator in Akron, Ohio.</p>
+                        <a class="btn" href="http://www.thebitfactory.com">Learn More</a>
                     </li>
                 </ul>
             </div>
