--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <section id="About">
             <div class="container">
                 <h2>Dedicated To Entrepreneurship</h2>
-                <p>Jack and James Hilton are indentical twins and serial entrepreneurs; they grew up in Akron, Ohio, following in the business footsteps of their father, James Larry, and grandfather, James Lee. This is the future website for their intended entrepreneurial foundation that will seek to grow early stage internet startup culture nationwide.</p>
-                <p>The Hilton brothers are previously, and currently, co-founders of multiple startups with their business partners <a href="http://www.austinkettner.com" target="_blank"">Austin Kettner</a>.</p>
+                <p>Jack and James Hilton are indentical twins and serial entrepreneurs, following in the business footsteps of their father, James Larry, and grandfather, James Lee. This is the future website for their intended entrepreneurial foundation that will seek to grow early stage internet startup culture in Akron, Ohio and nationwide.</p>
+                <p>The Hilton brothers are previously, and currently, co-founders of multiple startups with their business partner <a href="http://www.austinkettner.com" target="_blank"">Austin Kettner</a>.</p>
                 <img src="images/filler.png"/>
             </div>
         </section>
