--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <h2>Dedicated To Entrepreneurship</h2>
                 <p>Jack and James Hilton are indentical twins and serial entrepreneurs, following in the business footsteps of their father, James Larry, and grandfather, James Lee. This is the future website for their intended entrepreneurial foundation that will seek to grow early stage internet startup culture in Akron, Ohio and nationwide.</p>
-                <p>The Hilton brothers are previously, and currently, co-founders of multiple startups with their business partner <a href="http://www.austinkettner.com" target="_blank"">Austin Kettner</a>.</p>
+                <p>The Hilton brothers are previously, and currently, co-founders of multiple software and gaming startups with their business partner <a href="http://www.austinkettner.com" target="_blank"">Austin Kettner</a>.</p>
                 <img src="images/filler.png"/>
             </div>
         </section>
