--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <!-- Header -->
         <header id="main-header">
             <div class="container">
-                <h1>J.L. Hilton FDN</h1>
-                <p>Built with Perseverance, Honesty, and Conservation </p>
+                <h1>The Hilton Brothers</h1>
+                <p>Focused on Perseverance, Honesty, and Conservation </p>
             </div>
         </header>
 
