--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Header -->
         <header id="main-header">
             <div class="container">
-                <h1>The Hilton Brothers</h1>
+                <h1>J.L. Hilton</h1>
                 <p>Focused on Perseverance, Honesty, and Conservation </p>
             </div>
         </header>
