--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
             <div class="slider">
                 <ul>
                     <li class="slide" id="slide1">
-                        <h2>WonderKiln</h2>
-                        <p>Creator of <a href="http://www.flurgle.io" target="_blank">Flurgle</a>, WonderKiln, Inc. builds awesome products - UI, UX, and development.</p>
-                        <a class="btn" href="http://www.wonderkiln.com">Learn More</a>
+                        <h2>Alterac, Inc.</h2>
+                        <p>Creator of CameraKit, making camera easy for developers.</p>
+                        <a class="btn" href="https://www.camerakit.io">Learn More</a>
                     </li>
                     <li class="slide" id="slide2">
-                        <h2>Inkhorn Games</h2>
-                        <p>Video game development and publishing, such as Nerd Score and <a href="http://www.orderofancients.com" target="_blank">Order of Ancients</a>.</p>
-                        <a class="btn" href="http://www.inkhorngames.com">Learn More</a>
+                        <h2>WonderKiln, Inc.</h2>
+                        <p>Building awesome products - UI, UX, and development studio.</p>
+                        <a class="btn" href="https://www.wonderkiln.com">Learn More</a>
                     </li>
                     <li class="slide" id="slide3">
-                        <h2>Extinct Corporation</h2>
-                        <p>Stealthmode PC gaming platform, slowly controlling the future.</p>
-                        <a class="btn" href="http://www.extinctcorp.com">Learn More</a>
+                        <h2>Clusio, Inc.</h2>
+                        <p>Mobile healthcare technology for procedure validation and outcomes measurement.</p>
+                        <a class="btn" href="https://www.clus.io">Learn More</a>
                     </li>
                     <li class="slide" id="slide4">
                         <h2>The Bit Factory</h2>
-                        <p>Software and gaming startup accelerator in Akron, Ohio.</p>
-                        <a class="btn" href="http://www.thebitfactory.com">Learn More</a>
+                        <p>Software startup accelerator in Akron, Ohio.</p>
+                        <a class="btn" href="https://www.bouncehub.org">Learn More</a>
                     </li>
                 </ul>
             </div>
