--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <footer>
             <div class="container">
                 <div id="footer-text" class="small">
-                <p>&copy; Jack & James L. Hilton. 2015. | <a href="https://www.flickr.com/photos/kenlund/7994666775" target="_blank">Photo</a> under <a href="https://creativecommons.org/licenses/by-sa/2.0/" target="_blank">CC BY 2.0</a> | Fore, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a></p>
+                <p>&copy; Jack & James L. Hilton. 2015-2018. | <a href="https://www.flickr.com/photos/kenlund/7994666775" target="_blank">Photo</a> under <a href="https://creativecommons.org/licenses/by-sa/2.0/" target="_blank">CC BY 2.0</a> | Fore, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a></p>
                 </div>
             </div>
         </footer>
