--- a/index.html
+++ b/index.html
@@ -1,144 +1,24 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html>
 
-    <head>
+<head>
+	<meta charset="UTF-8">
 
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Jack Hilton | James Hilton</title>
 
-        <title>J. L. Hilton Foundation</title>
+	<style>
+		* { margin: 0; padding: 0; }
 
-        <meta name="description" content="This website and organization is under construction - the future home of the J. L. Hilton Foundation.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Jack Hilton">
-        <meta name="keywords" content="akron, entrepreneurship, inkhorn games, the bit factory, darkshore, wonderkiln, 3pivots, extinct corporation, quixby, philanthropy, ohio, flurgle">
+		html {
+			background: url(images/bg.jpg) no-repeat center center fixed;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
+		}
 
-        <link href="less/fore.css" rel="stylesheet">
-
-        <link href="http://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
-
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
-        <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
-
-    </head>
-
-    <body>
-
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chrome/‎">install Google Chrome</a> to experience this site.</p>
-        <![endif]-->
-
-
-        <!-- Header -->
-        <header id="main-header">
-            <div class="container">
-                <h1>J.L. Hilton</h1>
-                <p>Focused on Perseverance, Honesty, and Conservation </p>
-            </div>
-        </header>
-
-
-        <!-- About Section -->
-        <section id="About">
-            <div class="container">
-                <h2>Dedicated To Entrepreneurship</h2>
-                <p>Jack and James Hilton are indentical twins and serial entrepreneurs, following in the business footsteps of their father, James Larry, and grandfather, James Lee. This is the future website for their intended entrepreneurial foundation that will seek to grow early stage internet startup culture in Akron, Ohio and nationwide.</p>
-                <p>The Hilton brothers are previously, and currently, co-founders of multiple software and gaming startups with their business partner <a href="http://www.austinkettner.com" target="_blank"">Austin Kettner</a>.</p>
-                <img src="images/filler.png"/>
-            </div>
-        </section>
-
-
-        <!-- Slider Section -->
-        <section class="slider-main">
-            <div id="left-arrow">
-                <a href="#" class="unslider-arrow prev">
-                    <i class="fa fa-chevron-left fa-2x"></i>
-                </a>
-            </div>
-            <div id="right-arrow">
-                <a href="#" class="unslider-arrow next">
-                    <i class="fa fa-chevron-right fa-2x"></i>
-                </a>
-            </div>
-            <div class="slider">
-                <ul>
-                    <li class="slide" id="slide1">
-                        <h2>Alterac, Inc.</h2>
-                        <p>Creator of CameraKit, making camera easy for developers.</p>
-                        <a class="btn" href="https://www.camerakit.io">Learn More</a>
-                    </li>
-                    <li class="slide" id="slide2">
-                        <h2>WonderKiln, Inc.</h2>
-                        <p>Building awesome products - UI, UX, and development studio.</p>
-                        <a class="btn" href="https://www.wonderkiln.com">Learn More</a>
-                    </li>
-                    <li class="slide" id="slide3">
-                        <h2>Clusio, Inc.</h2>
-                        <p>Mobile healthcare technology for procedure validation and outcomes measurement.</p>
-                        <a class="btn" href="https://www.clus.io">Learn More</a>
-                    </li>
-                    <li class="slide" id="slide4">
-                        <h2>The Bit Factory</h2>
-                        <p>Software startup accelerator in Akron, Ohio.</p>
-                        <a class="btn" href="https://www.bouncehub.org">Learn More</a>
-                    </li>
-                </ul>
-            </div>
-        </section>
-
-
-        <!-- Footer -->
-        <footer>
-            <div class="container">
-                <div id="footer-text" class="small">
-                <p>&copy; Jack & James L. Hilton. 2015-2018. | <a href="https://www.flickr.com/photos/kenlund/7994666775" target="_blank">Photo</a> under <a href="https://creativecommons.org/licenses/by-sa/2.0/" target="_blank">CC BY 2.0</a> | Fore, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a></p>
-                </div>
-            </div>
-        </footer>
-
-
-        <!-- Reference jQuery -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
-        <!-- Reference Javascript -->
-        <script src="js/fore.min.js"></script>
-
-        <!-- Unslider script -->
-        <script>
-            $(document).ready(function () {
-                var unslider = $('.slider').unslider();
-                $('.unslider-arrow').click(function(event) {
-                    event.preventDefault();
-                    if ($(this).hasClass('next')) {
-                        unslider.data('unslider')['next']();
-                    } else {
-                        unslider.data('unslider')['prev']();
-                    };
-                });
-                var unslider = $('.slider').unslider();
-
-                unslider.on('movestart', function(e) {
-                    if((e.distX > e.distY && e.distX < -e.distY) || (e.distX < e.distY &&   e.distX > -e.distY)) {
-                        e.preventDefault();
-                    }
-                });
-        });
-        </script>
-
-        <!-- Google Analytics -->
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-65740620-1', 'auto');
-          ga('send', 'pageview');
-
-        </script>
-
-    </body>
+		#page-wrap { width: 400px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
+	</style>
+</head>
 
 </html>
